# nais-fastapi-template

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml  ruff.toml
.github/workflows/: build_deploy.yml  ci.yml
.nais/: app.yaml
src/nais_fastapi_template/: __init__.py  main.py  settings.py
src/nais_fastapi_template/nais/: __init__.py  auth.py  probes.py
