[project]
name = "nais-fastapi-template"
version = "0.1.0"
description = "FastAPI på NAIS plattformen"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ruff>=0.6.7",
]
